Fix navbar and white space at footer

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -1,20 +1,7 @@
 .main-body {
   width: 100%;
-  padding-bottom: 300px;
+  padding-bottom: 150px;
 }
-
-// .header-bar {
-//   display: flex;
-//   flex-direction: row;
-//   height: 50px;
-//   width: 100%;
-//   box-sizing: border-box;
-//   top: 0;
-//   color: white;
-//   align-items: center;
-// }
-
-//
 
 .header-bar {
   display: flex;
