--- a/app/assets/stylesheets/components/main_content.scss
+++ b/app/assets/stylesheets/components/main_content.scss
@@ -1,5 +1,5 @@
 .main-container {
-  height: 100vh;
+  height: 100%;
   background: #34e89e;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to top, #0f3443, #34e89e);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to top, #0f3443, #34e89e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -14,6 +14,7 @@
 .main-container .nav-bar {
   padding: 24px 24px 5px;
   display: flex;
+  position: sticky;
   flex-direction: column;
   height: 100vh;
   width: 230px;
